# enn554

./: .gitignore  .pre-commit-config.yaml  2_energy_fundamentals.ipynb  3_lecture_solar_fundamentals.ipynb  3_tutorial_solar_fundamentals.ipynb  4&5_lecture_CSP.ipynb  4_lecture_CSP.ipynb  5_tutorial_csp.ipynb  LICENSE  PT_thermal_model.py  README.md  csp_lecture.ipynb  csp_tutorial.ipynb  introduction.ipynb  numerical_computation_of_shading.ipynb  pyproject.toml  requirements.txt  solar_and_wind_resources_lecture.ipynb  solar_fundamentals.ipynb  wind_lecture.ipynb
egb351/: constants.py  math.py  parabolic_trough.py  sun.py  utilities.py
enn554/: collector_geometry.py  math.py  parabolic_trough.py  sun.py  wind.py
notebooks/: _colab_install.py
notebooks/experimental/: numerical_computation_of_shading.ipynb  wind_farm_layout.ipynb
notebooks/lectures/: 1_introduction.ipynb  2_energy_fundamentals.ipynb  3_solar_and_wind_resources_lecture.ipynb  3_solar_radiation.ipynb  4_wind.ipynb  7_csp_lectures.ipynb  999_solar_and_wind_resources_lecture.ipynb  999_solar_fundamentals.ipynb  999_wind_fundamentals.ipynb  9_csp_lectures.ipynb  9_electrical_fundamentals.ipynb  wind.ipynb
notebooks/tutorials/: 10_csp_tutorial.ipynb  3_IN_CLASS_solar_radiation.ipynb  3_solar_radiation.ipynb  4_IN_CLASS_wind.ipynb  4_wind.ipynb  6_IN_CLASS_wind.ipynb  6_wind.ipynb  7_IN_CLASS_csp_pt_thermal_model.ipynb  7_csp_pt_thermal_model.ipynb
src/enn554/: bootstrap.py  central_tower.py  collector_geometry.py  math.py  paths.py  sun.py  utilities.py  wind.py
