[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enn554"
version = "2026.1.0" # YEAR.SEMESTER.VERSION
description = "Code for ENN554 Design of Renewable Energy Production Systems"
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Michael Cholette" }
]

requires-python = ">=3.10"

keywords = [
    "renewable energy",
    "solar",
    "wind",
    "teaching",
    "energy systems"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Energy",
]

# -------- Core runtime dependencies --------
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "CoolProp>=6.6",
    "windrose>=1.9",
    "pyvista>=0.44",
    "pyviewfactor>=0.0.16",
    "turbine_models>=0.1.1",
    "tqdm>=4.66",
    "turbine_models",
    "pvlib",
    "pywake",
    "sympy",
    "cartopy",
    "shapely",
    "geopandas",
    "pysolar"
]

# -------- Optional environments --------
[project.optional-dependencies]

notebooks = [
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipykernel>=6.0",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "sympy"
]


dev = [
    "black",
    "ruff",
    "pytest",
    "pre-commit",
    "nbstripout"
]

all = [
    "enn554[notebooks,dev]"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
